--- a/Lecture3/DLP_attacks.ipynb
+++ b/Lecture3/DLP_attacks.ipynb
@@ -2,6 +2,66 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a247324b-7260-414d-b00b-9e13456313a9",
+   "metadata": {},
+   "source": [
+    "# Быстрое возведение в степень(mul sqr)\n",
+    "\n",
+    "$x^{17} = (((x^2)^2)^2)^2 * x$, `17 = 0b10001`\n",
+    "\n",
+    "$x^{13} = ((x^2 * x)^2)^2 * x$, `13 = 0b1101`\n",
+    "\n",
+    "\n",
+    "С другой стороны\n",
+    "\n",
+    "$x^{17} = x * (x^8)^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "506ffcbf-705f-4980-a2ff-6774b8dab06b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fast_pow(x, n):\n",
+    "    res = x\n",
+    "    for i in bin(n)[2:][1:]:\n",
+    "        res = res^2\n",
+    "        if i == '1':\n",
+    "            res *= x\n",
+    "    return res        \n",
+    "\n",
+    "def rec_fast_pow(x, n):\n",
+    "    if n == 1:\n",
+    "        return x\n",
+    "    if n < 0:\n",
+    "        return rec_fast_pow(1/x, -n)\n",
+    "\n",
+    "    if n & 1 == 0:\n",
+    "        return rec_fast_pow(x, n//2)^2\n",
+    "    else:\n",
+    "        return x * rec_fast_pow(x, n//2)^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "155c4bf6-7118-4bad-b5f2-7df685f6a8db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = random_prime(2**256)\n",
+    "G = GF(p)\n",
+    "for i in range(10000):\n",
+    "    a = G.random_element()\n",
+    "    e = randint(1, p-1)\n",
+    "    assert a^e == fast_pow(a, e)\n",
+    "    assert a^e == rec_fast_pow(a, e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d86dd31-5147-4a68-804a-7a58cbd5a747",
    "metadata": {},
    "source": [
