--- a/Lecture4/Advances.ipynb
+++ b/Lecture4/Advances.ipynb
@@ -2,6 +2,151 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e02ab12f-8c5b-4966-8a16-ade2b2254954",
+   "metadata": {},
+   "source": [
+    "# ECIES\n",
+    "\n",
+    "## Сетап\n",
+    "\n",
+    "$E: y^2 = x^3 + a x + b \\pmod{p}$\n",
+    "\n",
+    "$A$ - случайная точка, длп сложный\n",
+    "\n",
+    "$s$ - секрет\n",
+    "\n",
+    "$B = sA$\n",
+    "\n",
+    "$(E, A, B, p)$ - публичное\n",
+    "\n",
+    "$s$ - приватное\n",
+    "\n",
+    "## Шифрование\n",
+    "\n",
+    "$k$ - случайное\n",
+    "\n",
+    "$R = k * A$\n",
+    "\n",
+    "$Z = k * B$\n",
+    "\n",
+    "$k_1k_2 = HASH(R||Z)$\n",
+    "\n",
+    "$k_1 = k_1k_2[:16]$\n",
+    "\n",
+    "$k_2 = k_1k_2[16:]$\n",
+    "\n",
+    "$c = AES(k_11, m)$\n",
+    "\n",
+    "$t = HASH(c||k_2)$\n",
+    "\n",
+    "$(R, c, t)$\n",
+    "\n",
+    "## Расшифрование\n",
+    "\n",
+    "$Z = s R$\n",
+    "\n",
+    "$k_1k_2 = HASH(R||Z)$\n",
+    "\n",
+    "$k_1 = k_1k_2[:16]$\n",
+    "\n",
+    "$k_2 = k_1k_2[16:]$\n",
+    "\n",
+    "$t_1 = HASH(c||k_2)$\n",
+    "\n",
+    "$t_1 == t$ ? \n",
+    "\n",
+    "$m = AES(k1, c)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "02debe6d-5471-4598-9697-f77ce6dd4797",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hey Bubs'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from os import urandom\n",
+    "\n",
+    "from Crypto.Cipher import AES\n",
+    "from Crypto.Hash import BLAKE2b\n",
+    "from Crypto.Util.number import getPrime\n",
+    "from Crypto.Util.Padding import pad, unpad\n",
+    "from sage.all import GF, EllipticCurve, randint\n",
+    "\n",
+    "\n",
+    "def setup(nbit):\n",
+    "    p = getPrime(nbit)\n",
+    "    a, b = 1, 2\n",
+    "    E = EllipticCurve(GF(p), [a, b])\n",
+    "    N = E.order()\n",
+    "    A = E.random_point()\n",
+    "    s = randint(1, N - 1)\n",
+    "    B = s * A\n",
+    "    return (E, A, B, p), s\n",
+    "\n",
+    "\n",
+    "def encrypt(pkey, msg):\n",
+    "    E, A, B, p = pkey\n",
+    "    N = E.order()\n",
+    "    k = randint(1, N - 1)\n",
+    "    R = k * A\n",
+    "    Z = k * B\n",
+    "\n",
+    "    H1 = BLAKE2b.new(digest_bytes=32)\n",
+    "    H1.update(f\"{R.xy()}||{Z.xy()}\".encode())\n",
+    "    k1k2 = H1.digest()\n",
+    "\n",
+    "    k1, k2 = k1k2[:16], k1k2[16:]\n",
+    "\n",
+    "    iv = urandom(16)\n",
+    "    C = AES.new(k1, mode=AES.MODE_CBC, iv=iv)\n",
+    "    ct = iv + C.encrypt(pad(msg, 16))\n",
+    "\n",
+    "    H2 = BLAKE2b.new(digest_bytes=16)\n",
+    "    H2.update(ct + b\"||\" + k2)\n",
+    "    t = H2.digest()\n",
+    "    return (R, ct, t)\n",
+    "\n",
+    "\n",
+    "def decrypt(pkey, skey, C):\n",
+    "    R, ct, t = C\n",
+    "    E, A, B, p = pkey\n",
+    "\n",
+    "    Z = skey * R\n",
+    "    H1 = BLAKE2b.new(digest_bytes=32)\n",
+    "    H1.update(f\"{R.xy()}||{Z.xy()}\".encode())\n",
+    "    k1k2 = H1.digest()\n",
+    "\n",
+    "    k1, k2 = k1k2[:16], k1k2[16:]\n",
+    "\n",
+    "    H2 = BLAKE2b.new(digest_bytes=16)\n",
+    "    H2.update(ct + b\"||\" + k2)\n",
+    "    t_ = H2.digest()\n",
+    "    if t_ != t:\n",
+    "        return None\n",
+    "\n",
+    "    iv, ct = ct[:16], ct[16:]\n",
+    "    D = AES.new(k1, mode=AES.MODE_CBC, iv=iv)\n",
+    "    msg = unpad(D.decrypt(ct), 16)\n",
+    "    return msg\n",
+    "\n",
+    "\n",
+    "pkey, skey = setup(128)\n",
+    "C = encrypt(pkey, b\"Hey Bubs\")\n",
+    "M = decrypt(pkey, skey, C)\n",
+    "print(M)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "620b67ad-aebe-4826-b861-ee602fe4169a",
    "metadata": {},
    "source": [
