--- a/Lecture4/ECDSA_attacks.ipynb
+++ b/Lecture4/ECDSA_attacks.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "17be370b-9f93-4d31-afd2-2fc08b459a27",
    "metadata": {},
    "outputs": [],
@@ -48,18 +48,26 @@
     "d_a = randint(1, q-1)\n",
     "Q_a = d_a * G\n",
     "\n",
+    "o = G.order()\n",
     "m = b\"Where's your motivation?\"\n",
     "\n",
     "def sign(m):\n",
     "    z = int(blake2b(m, digest_size=q.bit_length() // 16).hexdigest(), 16)\n",
     "    k = randint(1, q-1)\n",
-    "    r = (k * G)[0]\n",
+    "    r = int((k * G)[0]) % o\n",
     "    s = pow(int(k), -1, q) * (z + int(r) * d_a) % q\n",
-    "    return r, s\n",
+    "    return r, s, z\n",
     "\n",
     "\n",
-    "def verify(G, Q):\n",
-    "    pass # your code here"
+    "def verify(G, Q, r, s, o):\n",
+    "    u1 = pow(s, -1, o) * z % o\n",
+    "    u2 = pow(s, -1, o) * r % o\n",
+    "\n",
+    "    assert int((u1 * G + u2 * Q)[0]) % o == r\n",
+    "\n",
+    "r, s, z = sign(m)\n",
+    "\n",
+    "verify(G, Q_a, r, s, o)"
    ]
   },
   {
@@ -78,22 +86,80 @@
     "\n",
     "$s_2 = k_2^{-1} * (z_2 + r_2 * d_a) \\pmod{ord(G)}$\n",
     "\n",
-    "$s_1 - s_2 = ?$"
+    "$s_1 - s_2 = k^{-1}(z_1 - z_2) \\pmod{ord(G)}$\n",
+    "\n",
+    "$k = (z_1 - z_2) * (s_1 - s_2)^{-1} \\pmod{ord(G)}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b2b60e1e-b137-4314-b096-5ed089219dc2",
+   "execution_count": 16,
+   "id": "946727c0-4653-459e-b732-a64925de1f3a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "k = randint(1, q-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b2b60e1e-b137-4314-b096-5ed089219dc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16119135902351571520453442811871580027364205679996006764158118558377836933618"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "m1 = b\"Put your Curve Away Walter\"\n",
     "m2 = b\"Heisenburger, please\"\n",
-    "sig1 = (4277780017972557311128335802010728886782848122039699071321357712116296932830, 3845435156702943018862299620733409979985840941193474803479576674739659799445)\n",
-    "sig2 = (4277780017972557311128335802010728886782848122039699071321357712116296932830, 7004175279934708328877655868515031514976447217956478362696843732609808859306)\n",
     "\n",
-    "# your code here"
+    "def sign(m):\n",
+    "    z = int(blake2b(m, digest_size=q.bit_length() // 16).hexdigest(), 16)\n",
+    "    r = int((k * G)[0]) % o\n",
+    "    s = pow(int(k), -1, q) * (z + int(r) * d_a) % q\n",
+    "    return r, s, z\n",
+    "\n",
+    "sig1 = sign(m1)\n",
+    "sig2 = sign(m2)\n",
+    "\n",
+    "r1, s1, z1 = sig1\n",
+    "r2, s2, z2 = sig2\n",
+    "\n",
+    "k = (z1 - z2) * pow(s1 - s2, -1, o) % o\n",
+    "\n",
+    "d = (s1 * k - z1) * pow(r1, -1, o) % o\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ee34d1a2-cbb3-4a17-a842-013fd03762f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3280766721065071630939891882847820472644694453927095347044796964490400873472 : 123810441720935794545967070096899493176168878996421771814820203418245191862 : 1),\n",
+       " (3280766721065071630939891882847820472644694453927095347044796964490400873472 : 123810441720935794545967070096899493176168878996421771814820203418245191862 : 1))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_a, d * G"
    ]
   },
   {
@@ -198,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "b4cba05f-d839-48e0-9a33-4ba07603a63e",
    "metadata": {},
    "outputs": [],
@@ -230,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "0963ea82-4499-4f0a-a1ef-dfb40b84de3c",
    "metadata": {},
    "outputs": [],
@@ -246,10 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "9c2f0c03-44d8-41ac-861a-1c4e0a560f4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(16119135902351571520453442811871580027364205679996006764158118558377836933618,\n",
+       "  1)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = var('d')\n",
     "P = PolynomialRing(GF(q), d)\n",
@@ -263,8 +341,37 @@
     "den = M.det()\n",
     "\n",
     "final_poly = P(ks[-1] * den - den * sum(T[i] * ks[-2]**i for i in range(t)))\n",
-    "# final_poly.roots()"
+    "final_poly.roots()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1cb211a9-cf1d-4799-b59b-bd91e8288063",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16119135902351571520453442811871580027364205679996006764158118558377836933618"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be10bf06-a019-4007-8f2f-c0226072f4d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
