--- a/Lecture4/EllipticCurves.ipynb
+++ b/Lecture4/EllipticCurves.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "7b525125-b522-4cb6-bbe0-fb97f63aac3a",
    "metadata": {},
    "outputs": [],
@@ -311,6 +311,7 @@
     "\n",
     "left = yr^2\n",
     "right = xr^3 + a * xr + b\n",
+    "\n",
     "assert factor(left - right) == 0\n",
     "\n",
     "lam = (3 * xp^2 + a) / (2 * yp) \n",
@@ -385,6 +386,28 @@
     "print(P + P)\n",
     "Q = P + P\n",
     "print(Q + P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "944f3877-98ae-4b71-8b70-e4d8b5237f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(121/4096, 121/4096)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y = -23/16, -11/64\n",
+    "y^2, x^3 + 3"
    ]
   },
   {
@@ -551,12 +574,17 @@
     "\n",
     "## Кубическое уравнение\n",
     "\n",
-    "Например $x^3 + y^3 + z^3 = 0 \\to y_1^2 = x_1^3 - 432$. В саге EllipticCurve_from_cubic"
+    "Например $x^3 + y^3 + z^3 = 0 \\to y_1^2 = x_1^3 - 432$. В саге EllipticCurve_from_cubic\n",
+    "\n",
+    "$u^3 + v^3 = -1$\n",
+    "\n",
+    "$u = x + y$\n",
+    "$v = x - y$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "632152e3-7f99-477f-95eb-978386600a40",
    "metadata": {},
    "outputs": [
@@ -570,7 +598,7 @@
        "        (-x : y : 3*y - 2*z)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +648,7 @@
     "\n",
     "$y^2 z^{-2} = x^3 z^{-3} + a x z^{-1} + b \\to z y^2 = x^3 + a z^2 x + bz^3$\n",
     "\n",
-    "$(x: y: z)$\n",
+    "$(x: y: z) = (a * x: a * y: a * z)$\n",
     "\n",
     "Помогает убрать вычисление обратного элемента при сложении\n",
     "\n",
@@ -662,6 +690,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "95f9467b-6fc2-498c-980b-4e7346aa1db4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((9 : 4 : 1),)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E = EllipticCurve(GF(13), [2, 10])\n",
+    "\n",
+    "# A = E.gens()[0] * 9# B = E.gens()[0] * 6\n",
+    "\n",
+    "# E = EllipticCurve(GF(13^3), [2, 10])\n",
+    "\n",
+    "# E.gens()[0].order(), E.gens()[1].order()\n",
+    "\n",
+    "# a1 = E.gens()[0] * 2 * 9 * 13\n",
+    "# a2 = E.gens()[1] * 2 * 9 * 13\n",
+    "\n",
+    "# [i * a1 for i in range(3)], [i * a2 for i in range(3)]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f806f792-2e41-4038-afd1-962662c0f60c",
    "metadata": {},
@@ -675,20 +735,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "78c957ed-0c66-4256-851e-7bdf87a1a5e1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(x + 1/4*((3*x^2 + A)*(12*x - (3*x^2 + A)^2/y^2)/y - 16*y)^2/(12*x - (3*x^2 + A)^2/y^2)^2 - 1/4*(3*x^2 + A)^2/y^2,\n",
-       " -y + 1/8*((3*x^2 + A)*(12*x - (3*x^2 + A)^2/y^2)/y - 16*y)*(((3*x^2 + A)*(12*x - (3*x^2 + A)^2/y^2)/y - 16*y)^2/(12*x - (3*x^2 + A)^2/y^2)^2 - (3*x^2 + A)^2/y^2)/(12*x - (3*x^2 + A)^2/y^2))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x^9 + 4/3*A*x^7 + 2/3*A^2*x^5 + 8/9*A*x^4*y^2 + 16/27*A^2*x^2*y^2 + 64/81*y^6 + 8/81*A^3*y^2 - 4/27*(12*y^4 - A^3)*x^3 - 1/81*(96*A*y^4 - A^4)*x\n",
+      "x^8 + 4/3*A*x^6 - 8/3*x^5*y^2 + 2/3*A^2*x^4 - 16/9*A*x^3*y^2 + 16/9*x^2*y^4 + 4/27*A^3*x^2 - 8/27*A^2*x*y^2 + 1/81*A^4\n",
+      "\n",
+      "17496*x^12*y + 34992*A*x^10*y - 38880*x^9*y^3 + 29160*A^2*x^8*y - 51840*A*x^7*y^3 - 25920*A^2*x^5*y^3 + 4096*y^9 + 768*A^3*y^5 + 2592*(12*y^5 + 5*A^3*y)*x^6 + 24*A^6*y + 216*(128*A*y^5 + 15*A^4*y)*x^4 - 1152*(12*y^7 + 5*A^3*y^3)*x^3 + 144*(56*A^2*y^5 + 3*A^5*y)*x^2 - 96*(96*A*y^7 + 5*A^4*y^3)*x\n",
+      "8*(81*x^8 + 108*A*x^6 - 216*x^5*y^2 + 54*A^2*x^4 - 144*A*x^3*y^2 + 144*x^2*y^4 + 12*A^3*x^2 - 24*A^2*x*y^2 + A^4)*(9*x^4 + 6*A*x^2 - 12*x*y^2 + A^2)\n"
+     ]
     }
    ],
    "source": [
@@ -712,7 +772,100 @@
     "P2 = double_point(P, A)\n",
     "P4 = double_point(P, A)\n",
     "P5 = add_points(P, P4)\n",
-    "P5"
+    "print(expand(P5[0]).numerator())\n",
+    "print(expand(P5[0]).denominator())\n",
+    "print()\n",
+    "print(expand(P5[1]).numerator())\n",
+    "print(expand(P5[1]).denominator())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ad13d98f-f62c-4b20-9b48-67c1a1378243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = random_prime(2**256)\n",
+    "g = GF(p)\n",
+    "\n",
+    "a = g.random_element()\n",
+    "\n",
+    "a^(p - 1) == 1\n",
+    "\n",
+    "E = EllipticCurve(GF(p), [0, 3])\n",
+    "\n",
+    "G = E((1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "4e12bb53-ec34-4a90-94fe-85b9543c40d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1 : 88130372321456384390679688337713764227903577407743960474417754555186417663375 : 1)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-E.lift_x(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b9589825-9432-4051-8464-b875486c8911",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88130372321456384390679688337713764227903577407743960474417754555186417663375"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p - 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "0296199a-b1a2-4e76-8007-bf47f2754a70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P1 = 3\n",
+    "P2 = 19\n",
+    "P5 = 38737\n",
+    "P15 = 637677991750717\n",
+    "P20 = 57205580621648060101\n",
+    "P37 = 1094170343070601245168412032075999583\n",
+    "\n",
+    "P37.bit_length()"
    ]
   },
   {
@@ -735,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 58,
    "id": "359ccdd2-c5c1-4409-8100-09979413d40e",
    "metadata": {},
    "outputs": [
@@ -743,9 +896,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elliptic Curve defined by y^2 = x^3 + 240851292642111434592258740399517926880756487585657960*x + 85985700257409910657488865864859181845273517914476811 over Finite Field of size 260725031160286220211158041776798992663644669716218573\n",
-      "|E| = 260725031160286220211158041360294738060303313692918308 = 2^2 * 3 * 109 * 13816677759355733 * 14426844647457075389448414477500147\n",
-      "ord(G) = 3 * 109 * 13816677759355733 * 14426844647457075389448414477500147\n"
+      "Elliptic Curve defined by y^2 = x^3 + 110198340798596814103316327410147296817499834509458534*x + 64781751666887242504046230190626905693728857367786305 over Finite Field of size 172390890904600186055925403092945701708404913253392401\n",
+      "|E| = 172390890904600186055925402836006987680232711891075105 = 5 * 19 * 223 * 2111 * 15139 * 4300536230030251 * 59207648470310182306849727\n",
+      "p = 172390890904600186055925403092945701708404913253392401\n",
+      "ord(G) = 5 * 19 * 223 * 2111 * 15139 * 4300536230030251 * 59207648470310182306849727\n"
      ]
     }
    ],
@@ -759,6 +913,7 @@
     "\n",
     "print(E)\n",
     "print(f'|E| = {E.order()} = {factor(E.order())}')\n",
+    "print(f\"{p = }\")\n",
     "print(f'ord(G) = {factor(G.order())}')\n",
     "\n",
     "assert E.order() * G == E((0, 1, 0))\n",
@@ -772,6 +927,8 @@
    "metadata": {},
    "source": [
     "# Теорема Хассе\n",
+    "\n",
+    "$q = p^e$\n",
     "\n",
     "$|q + 1 - |E(F_q)|| \\le 2 \\sqrt{q}$\n",
     "\n",
@@ -801,7 +958,21 @@
     "\n",
     "$X^2 - aX + q = 0$\n",
     "\n",
-    "$(x^{q^2}, y^{q^2}) - a(x^q, y^q) + q(x, y) = 0$"
+    "$(x^{q^2}, y^{q^2}) - a(x^q, y^q) + q(x, y) = 0$\n",
+    "\n",
+    "$q * (x, y) = -(x^{q^2}, y^{q^2}) + a(x^q, y^q)$\n",
+    "\n",
+    "$(x^q, y^q) - \\tau (x, y) = 0$\n",
+    "\n",
+    "$x^2 = x + 1$\n",
+    "\n",
+    "$\\phi^2 = \\phi + 1$\n",
+    "\n",
+    "$\\phi^3 = \\phi (\\phi + 1) = \\phi^2 + \\phi  = 2 * \\phi + 1$\n",
+    "\n",
+    "$\\phi^2 + \\phi^3 = \\phi + 1 + 2 * \\phi + 1$\n",
+    "\n",
+    "$2 = \\phi^2 + \\phi^3 - 3 * \\phi$"
    ]
   },
   {
@@ -852,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "8d81bce7-b124-4a62-ab61-81bfec3095c5",
    "metadata": {},
    "outputs": [],
@@ -892,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "id": "37481049-5252-4ff2-9b47-67b544194dcf",
    "metadata": {},
    "outputs": [
@@ -900,8 +1071,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, -1, 0, 1, -1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 1, 0, -1, 0, 1, -1, 0, 0, 1, 0, 0, -1, 0, 0, 0, 1, 0, -1, 0, 1]\n",
-      "[0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1]\n"
+      "[-1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, -1, 0, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, 1, 1, 0, 1, 0, -1, 0, 0, 1, 0, 1, 0, 0, 0, -1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1]\n",
+      "[1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1]\n"
      ]
     }
    ],
@@ -990,12 +1161,12 @@
     "\n",
     "Заранее вычислим хэш-таблицу : $(j * P, j), j \\in [0, 3\\sqrt{n}]$ \n",
     "\n",
-    "Проитерируемся по $i \\in [0, 3\\sqrt{n}]$ и проверем есть ли ключ $Q - i * (m * P)$ в таблице."
+    "Проитерируемся по $i \\in [0, \\sqrt{n}]$ и проверем есть ли ключ $Q - i * (m * P)$ в таблице."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "id": "1d828e3f-c986-40ec-a280-ed9ab53236c1",
    "metadata": {},
    "outputs": [
@@ -1003,10 +1174,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2^3 * 137 * 63559 * 160230845209\n",
       "m = 400288\n",
       "(0 : 1 : 0)\n",
       "Finished precomp\n",
-      "17262759420 17262759420\n"
+      "32615212020 32615212020\n"
      ]
     }
    ],
@@ -1036,6 +1208,7 @@
     "        Q0 -= mP\n",
     "    return None\n",
     "\n",
+    "print(factor(E.order()))\n",
     "G = E.gens()[0] * (2^3 * 137 * 63559)\n",
     "m = randint(1, G.order() - 1)\n",
     "Q = m * G\n",
@@ -1076,8 +1249,16 @@
    "id": "54175e3c-4491-4c7e-aa94-83de6d32e581",
    "metadata": {},
    "source": [
-    "Еще есть $Pollard \\rho, Pollard \\lambda$"
+    "Еще есть $Pollard\\ \\rho, Pollard\\ \\lambda$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fc269ae-158a-4aec-a176-5bfb9aaf353e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
