--- a/Lecture4/ECDH_attacks.ipynb
+++ b/Lecture4/ECDH_attacks.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "2367d48d-37a2-4e53-aeae-38d515c0540f",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "d44f6a03-dad1-49e4-835f-210cbb396e60",
    "metadata": {},
    "outputs": [
@@ -150,14 +150,13 @@
    "source": [
     "q = 21888242871839275222246405745257275088696311157297823662689037894645226208583\n",
     "E = EllipticCurve(GF(q), [0, 1])\n",
-    "P = E.lift_x(11287088411198481362140708319687060898747531990151311319674794660705219235317)\n",
     "\n",
     "print(factor(E.order()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "3e63d412-1a30-4d9c-a641-8478cfabd867",
    "metadata": {},
    "outputs": [
@@ -166,12 +165,15 @@
      "output_type": "stream",
      "text": [
       "2 * 3^2 * 13 * 19 * 29 * 37 * 613 * 983 * 11003 * 346501 * 6248149 * 405928799 * 79287328374952431757\n",
-      "2 * 3^2 * 13 * 19 * 29 * 37 * 613 * 983 * 11003 * 346501 * 6248149 * 405928799\n"
+      "2 * 3^2 * 13 * 19 * 29 * 37 * 613 * 983 * 11003 * 346501 * 6248149 * 405928799 * 79287328374952431757\n",
+      "2 * 3^2 * 13 * 29 * 37 * 613 * 983 * 11003 * 346501 * 6248149 * 405928799\n"
      ]
     }
    ],
    "source": [
     "P = E.gens()[0]\n",
+    "print(factor(P.order()))\n",
+    "    \n",
     "n = 79287328374952431757 * randint(0, 27797133921898830561267529521791838546)\n",
     "Q = n * P\n",
     "print(factor(P.order()))\n",
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "25eed9a9-5e97-4d30-8809-4f1a6319a203",
    "metadata": {},
    "outputs": [],
@@ -262,20 +264,20 @@
     "\n",
     "$Q_1 = m_0 * P_1 + p * (m_1 *  P_1 + ... + m_{e-1} * (p^{e - 2} * P)$\n",
     "\n",
-    "$Q_1 - m_0 * P_1 = m_1 * (p * P_1) + m_2 * (p * (p * P_1)) + .. + m_{e - 1} * (p^{e - 3} * (p * P_1)$\n",
+    "$Q_1 - m_0 * P_1 = m_1 * (p * P_1) + m_2 * (p * (p * P_1)) + .. + m_{e - 1} * (p^{e - 2} * (p * P_1)$\n",
     "\n",
     "$Q_2 = Q_1 - m_0 * P_1$\n",
     "\n",
     "$P_2 = p * P_1$\n",
     "\n",
-    "$Q_2 = m_1 * P_2 + m_2 * (p * P_2) + .. + m_{e - 1} * (p^{e - 3} * P_2)$\n",
+    "$Q_2 = m_1 * P_2 + m_2 *(p * P_2) + .. + m_{e - 1} * (p^{e - 2} * P_2)$\n",
     "\n",
     "$ord(P_2) = ord(Q_2) = p^{e -1 }$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "id": "756d69d4-a9a9-4712-aea3-7875af443122",
    "metadata": {},
    "outputs": [
@@ -288,53 +290,51 @@
       "m = 1\n",
       "--------------------------------------------------\n",
       "p, e =(3, 2)\n",
-      "m_0 = 1\n",
-      "m_1 = 0\n",
-      "m = 1\n",
+      "m_0 = 2\n",
+      "m_1 = 2\n",
+      "m = 8\n",
       "--------------------------------------------------\n",
       "p, e =(13, 1)\n",
-      "m_0 = 7\n",
-      "m = 7\n",
+      "m_0 = 1\n",
+      "m = 1\n",
       "--------------------------------------------------\n",
       "p, e =(19, 1)\n",
-      "m_0 = 16\n",
-      "m = 16\n",
-      "--------------------------------------------------\n",
+      "m = 0\n",
       "p, e =(29, 1)\n",
-      "m_0 = 23\n",
-      "m = 23\n",
+      "m_0 = 22\n",
+      "m = 22\n",
       "--------------------------------------------------\n",
       "p, e =(37, 1)\n",
-      "m_0 = 33\n",
-      "m = 33\n",
+      "m_0 = 9\n",
+      "m = 9\n",
       "--------------------------------------------------\n",
       "p, e =(613, 1)\n",
-      "m_0 = 209\n",
-      "m = 209\n",
+      "m_0 = 565\n",
+      "m = 565\n",
       "--------------------------------------------------\n",
       "p, e =(983, 1)\n",
-      "m_0 = 747\n",
-      "m = 747\n",
+      "m_0 = 126\n",
+      "m = 126\n",
       "--------------------------------------------------\n",
       "p, e =(11003, 1)\n",
-      "m_0 = 2625\n",
-      "m = 2625\n",
+      "m_0 = 8819\n",
+      "m = 8819\n",
       "--------------------------------------------------\n",
       "p, e =(346501, 1)\n",
-      "m_0 = 106033\n",
-      "m = 106033\n",
+      "m_0 = 64811\n",
+      "m = 64811\n",
       "--------------------------------------------------\n",
       "p, e =(6248149, 1)\n",
-      "m_0 = 5934990\n",
-      "m = 5934990\n",
+      "m_0 = 662381\n",
+      "m = 662381\n",
       "--------------------------------------------------\n",
       "p, e =(405928799, 1)\n",
-      "m_0 = 338932220\n",
-      "m = 338932220\n",
+      "m_0 = 43977770\n",
+      "m = 43977770\n",
       "--------------------------------------------------\n",
       "p, e =(79287328374952431757, 1)\n",
       "m = 0\n",
-      "214813465656825146614398792290220939119597332381751291329\n"
+      "1589912870632253598410796886382855830245345542178259118261\n"
      ]
     }
    ],
@@ -408,7 +408,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
+   "id": "de22ded6-335e-4368-a7c8-36b864cb150d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E = EllipticCurve(GF(101), [1, 69])\n",
+    "E.order()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "27a56782-7d7e-4492-a956-5ed8b35360ad",
    "metadata": {},
    "outputs": [],
@@ -418,6 +440,7 @@
     "b = 0x2CE7D1CA4493B0977F088F6D30D9241F8048FDEA112CC385B793BCE953998CAAE680864A7D3AA437EA3FFD1441CA3FB352B0B710BB3F053E980E503BE9A7FECE\n",
     "\n",
     "E = EllipticCurve(GF(p), [a, b])\n",
+    "assert E.order() == p\n",
     "\n",
     "P = E.random_element()\n",
     "Q = randint(0, p) * P"
@@ -425,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "id": "bf89333f-ab60-4d94-99cb-960911925909",
    "metadata": {},
    "outputs": [],
@@ -464,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "id": "b2c52355-187e-45e2-a001-4e9f0d33cefd",
    "metadata": {},
    "outputs": [
@@ -472,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2105022862933603049850514414379858853271053514658917896118302325690253659176201124439775130670037532765092929922445115330747929674728272711894590669581798\n"
+      "6580423973451703047762062349683967852989048968020199948724694186030410852629469815861811082547699222101664953208677803837179393306680320657110903129004768\n"
      ]
     }
    ],
@@ -491,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "id": "ebea1b60-4566-4258-8d0e-9ea50fbde15b",
    "metadata": {},
    "outputs": [],
@@ -546,8 +569,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7062afd6-8462-49e3-9200-79827cbd6ebe",
+   "metadata": {},
+   "source": [
+    "$\\psi(n) = x^{n^2 / 2} + ... $\n",
+    "\n",
+    "$\\phi(n)$\n",
+    "\n",
+    "$\\omega(n)$\n",
+    "\n",
+    "$n * (x, y) = (\\phi_n(x) / \\psi_n(x)^2, \\omega_n(x) / \\psi_n(x)^3 * y)$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "id": "ce46f9d8-8d45-4f0e-b2b1-495ce3d4bf1c",
    "metadata": {},
    "outputs": [],
@@ -557,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "id": "08406591-e5df-4c4b-a357-f95a9afb026e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2105022862933603049850514414379858853271053514658917896118302325690253659176201124439775130670037532765092929922445115330747929674728272711894590669581798"
+       "6580423973451703047762062349683967852989048968020199948724694186030410852629469815861811082547699222101664953208677803837179393306680320657110903129004768"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,6 +613,111 @@
     "assert res * P == Q\n",
     "res"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b32c9f6-b7a1-406b-b350-014a935af2f1",
+   "metadata": {},
+   "source": [
+    "$y^2 = x^3$\n",
+    "\n",
+    "\n",
+    "$y^2 = x^2 * (x + a)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbf769dd-8c16-420b-b5c4-f4c28e367020",
+   "metadata": {},
+   "source": [
+    "$x^2 = a \\pmod{p}$\n",
+    "\n",
+    "$a^{\\frac{p - 1}{2}} = 1, -1, 0$\n",
+    "\n",
+    "$x^{p -1} = 1 = a^{\\frac{p-1}{2}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f9154db2-87f7-4dc6-bb2d-7baee82de8d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = GF(101)\n",
+    "f = g.random_element()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9de56fb8-23f9-4350-b577-c36160df21ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pow(f, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "81e2113d-ce8d-4b50-a861-7f5cac12c6d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "29dc9716-61e5-4c59-b081-4b05b78d35a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legendre_symbol(74, 101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1434ba4f-6813-44ee-ad7f-ef366e43a1a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
