--- a/Lecture5/AES.ipynb
+++ b/Lecture5/AES.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "fcb0b110-3ee8-47f4-a0bb-42d8765235be",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sage.crypto.boolean_function import BooleanFunction\n",
-    "from sage.all import GF, var, PolynomialRing, BooleanPolynomialRing"
+    "from sage.all import GF, var, PolynomialRing, BooleanPolynomialRing, vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "08c44042-79fd-42c5-9ac8-2eef1327787d",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "171"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
+   "id": "35092b36-ab44-46bf-a124-f5fd56a7c28b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = var('x')\n",
+    "P = PolynomialRing(GF(2), 'x')\n",
+    "x = P(x)\n",
+    "G = GF(2**8, x, modulus=x**8 + x**4 + x**3 + x + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "35d7e64d-68f2-4a17-b1cc-99bb63eb6f1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = 37\n",
+    "G([0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4bd79772-f8b7-45fa-8c6d-e79a221abdf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_g = G([1, 0, 1, 0, 0, 1])\n",
+    "t_g**(-1) * t_g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b869f9a1-d328-426c-9c87-3b530625ae91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(x^4, x^4 + x^2 + x)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P1 = PolynomialRing(GF(2), 'x')\n",
+    "t1 = P1.random_element(degree=4)\n",
+    "t2 = P1.random_element(degree=4)\n",
+    "t1, t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "eb74ff6d-104c-4944-9bb2-72b385c4524e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x^6 + x^5 + x^4 + x^3 + x + 1"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1 * t2 - P1(x**8 + x**4 + x**3 + x + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "74db1a46-555c-4204-a0b3-cbc66b463788",
    "metadata": {},
    "outputs": [
@@ -62,7 +164,7 @@
        "x0*x1*x2*x3*x4*x6*x7 + x0*x1*x2*x3*x4*x6 + x0*x1*x2*x3*x4*x7 + x0*x1*x2*x3*x4 + x0*x1*x2*x3*x5*x7 + x0*x1*x2*x3*x6*x7 + x0*x1*x2*x3*x6 + x0*x1*x2*x3*x7 + x0*x1*x2*x3 + x0*x1*x2*x4*x5*x6*x7 + x0*x1*x2*x4*x5*x7 + x0*x1*x2*x4*x5 + x0*x1*x2*x4*x7 + x0*x1*x2*x5*x6*x7 + x0*x1*x2*x5*x7 + x0*x1*x2*x5 + x0*x1*x2*x6*x7 + x0*x1*x2*x6 + x0*x1*x2*x7 + x0*x1*x3*x4*x6*x7 + x0*x1*x3*x4*x6 + x0*x1*x3*x5*x6 + x0*x1*x3*x5*x7 + x0*x1*x3*x6*x7 + x0*x1*x4*x5*x6*x7 + x0*x1*x4*x5*x6 + x0*x1*x4*x5 + x0*x1*x4*x7 + x0*x1*x4 + x0*x1*x5*x6*x7 + x0*x1*x6 + x0*x1*x7 + x0*x1 + x0*x2*x3*x4*x5*x6*x7 + x0*x2*x3*x4*x5*x6 + x0*x2*x3*x4*x5*x7 + x0*x2*x3*x4*x5 + x0*x2*x3*x4*x6 + x0*x2*x3*x5*x6*x7 + x0*x2*x3*x5 + x0*x2*x3*x7 + x0*x2*x4*x5*x7 + x0*x2*x4*x5 + x0*x2*x4*x6*x7 + x0*x2*x4*x7 + x0*x2*x4 + x0*x2*x5*x6 + x0*x2*x5*x7 + x0*x2*x5 + x0*x2*x6 + x0*x2*x7 + x0*x3*x4*x5*x6 + x0*x3*x4*x5*x7 + x0*x3*x4*x6*x7 + x0*x3*x4*x6 + x0*x3*x4 + x0*x3*x5*x6*x7 + x0*x3*x5*x6 + x0*x3*x5 + x0*x3*x6 + x0*x4*x5*x6 + x0*x4*x5*x7 + x0*x4*x6*x7 + x0*x4*x6 + x0*x4*x7 + x0*x4 + x0*x5 + x0*x6 + x0 + x1*x2*x3*x4*x6*x7 + x1*x2*x3*x5*x6 + x1*x2*x3*x5*x7 + x1*x2*x3*x5 + x1*x2*x3*x6 + x1*x2*x3*x7 + x1*x2*x3 + x1*x2*x4*x5*x6*x7 + x1*x2*x4*x5*x6 + x1*x2*x4*x6*x7 + x1*x2*x4*x6 + x1*x2*x4*x7 + x1*x2*x4 + x1*x2*x5*x6*x7 + x1*x2*x6*x7 + x1*x2*x6 + x1*x2 + x1*x3*x4*x5*x6*x7 + x1*x3*x4*x5*x7 + x1*x3*x4*x6 + x1*x3*x4 + x1*x3*x6*x7 + x1*x3*x7 + x1*x3 + x1*x4*x5*x6 + x1*x4*x5*x7 + x1*x4*x6 + x1*x4 + x1*x5*x6*x7 + x1*x5*x6 + x1*x6 + x2*x3*x4*x5*x6*x7 + x2*x3*x4*x5*x6 + x2*x3*x4*x5*x7 + x2*x3*x5*x7 + x2*x3*x5 + x2*x3*x6*x7 + x2*x3*x7 + x2*x3 + x2*x4*x5*x6*x7 + x2*x4*x5*x6 + x2*x4*x5*x7 + x2*x4*x7 + x2*x4 + x2*x5*x6 + x2*x5*x7 + x2*x6*x7 + x2*x6 + x2*x7 + x2 + x3*x4*x7 + x3*x5*x6*x7 + x3*x5*x7 + x3*x6*x7 + x3 + x4*x5*x6 + x4*x6 + x4 + x5*x6*x7 + x5*x6 + x5*x7 + x6*x7 + 1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,8 +177,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ce161388-478d-435a-8605-507d8792ad92",
+   "execution_count": 30,
+   "id": "1b3210c3-6754-416c-b4f7-aff08ae9c671",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x0*x1*x2*x3*x4*x6*x7 + x0*x1*x2*x3*x4*x6 + x0*x1*x2*x3*x4*x7 + x0*x1*x2*x3*x4 + x0*x1*x2*x3*x5*x7 + x0*x1*x2*x3*x6*x7 + x0*x1*x2*x3*x6 + x0*x1*x2*x3*x7 + x0*x1*x2*x3 + x0*x1*x2*x4*x5*x6*x7 + x0*x1*x2*x4*x5*x7 + x0*x1*x2*x4*x5 + x0*x1*x2*x4*x7 + x0*x1*x2*x5*x6*x7 + x0*x1*x2*x5*x7 + x0*x1*x2*x5 + x0*x1*x2*x6*x7 + x0*x1*x2*x6 + x0*x1*x2*x7 + x0*x1*x3*x4*x6*x7 + x0*x1*x3*x4*x6 + x0*x1*x3*x5*x6 + x0*x1*x3*x5*x7 + x0*x1*x3*x6*x7 + x0*x1*x4*x5*x6*x7 + x0*x1*x4*x5*x6 + x0*x1*x4*x5 + x0*x1*x4*x7 + x0*x1*x4 + x0*x1*x5*x6*x7 + x0*x1*x6 + x0*x1*x7 + x0*x1 + x0*x2*x3*x4*x5*x6*x7 + x0*x2*x3*x4*x5*x6 + x0*x2*x3*x4*x5*x7 + x0*x2*x3*x4*x5 + x0*x2*x3*x4*x6 + x0*x2*x3*x5*x6*x7 + x0*x2*x3*x5 + x0*x2*x3*x7 + x0*x2*x4*x5*x7 + x0*x2*x4*x5 + x0*x2*x4*x6*x7 + x0*x2*x4*x7 + x0*x2*x4 + x0*x2*x5*x6 + x0*x2*x5*x7 + x0*x2*x5 + x0*x2*x6 + x0*x2*x7 + x0*x3*x4*x5*x6 + x0*x3*x4*x5*x7 + x0*x3*x4*x6*x7 + x0*x3*x4*x6 + x0*x3*x4 + x0*x3*x5*x6*x7 + x0*x3*x5*x6 + x0*x3*x5 + x0*x3*x6 + x0*x4*x5*x6 + x0*x4*x5*x7 + x0*x4*x6*x7 + x0*x4*x6 + x0*x4*x7 + x0*x4 + x0*x5 + x0*x6 + x0 + x1*x2*x3*x4*x6*x7 + x1*x2*x3*x5*x6 + x1*x2*x3*x5*x7 + x1*x2*x3*x5 + x1*x2*x3*x6 + x1*x2*x3*x7 + x1*x2*x3 + x1*x2*x4*x5*x6*x7 + x1*x2*x4*x5*x6 + x1*x2*x4*x6*x7 + x1*x2*x4*x6 + x1*x2*x4*x7 + x1*x2*x4 + x1*x2*x5*x6*x7 + x1*x2*x6*x7 + x1*x2*x6 + x1*x2 + x1*x3*x4*x5*x6*x7 + x1*x3*x4*x5*x7 + x1*x3*x4*x6 + x1*x3*x4 + x1*x3*x6*x7 + x1*x3*x7 + x1*x3 + x1*x4*x5*x6 + x1*x4*x5*x7 + x1*x4*x6 + x1*x4 + x1*x5*x6*x7 + x1*x5*x6 + x1*x6 + x2*x3*x4*x5*x6*x7 + x2*x3*x4*x5*x6 + x2*x3*x4*x5*x7 + x2*x3*x5*x7 + x2*x3*x5 + x2*x3*x6*x7 + x2*x3*x7 + x2*x3 + x2*x4*x5*x6*x7 + x2*x4*x5*x6 + x2*x4*x5*x7 + x2*x4*x7 + x2*x4 + x2*x5*x6 + x2*x5*x7 + x2*x6*x7 + x2*x6 + x2*x7 + x2 + x3*x4*x7 + x3*x5*x6*x7 + x3*x5*x7 + x3*x6*x7 + x3 + x4*x5*x6 + x4*x6 + x4 + x5*x6*x7 + x5*x6 + x5*x7 + x6*x7 + 1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = BooleanPolynomialRing(8, \"x\")\n",
+    "xs = list(B.gens())\n",
+    "B(f.algebraic_normal_form())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c42f85b3-b224-4f54-be5b-a1c7da9eca9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x0, x1, x2, x3, x4, x5, x6, x7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(142, x3 + x6 + x7)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "vec1 = vector(xs)\n",
+    "print(vec1)\n",
+    "\n",
+    "tt_f = f.truth_table()\n",
+    "max = 0\n",
+    "cur_f = None\n",
+    "\n",
+    "for p in product([0, 1], repeat=8):\n",
+    "    p1 = vector(GF(2), p)\n",
+    "    f1 = p1 * vec1\n",
+    "    f2 = BooleanFunction(f1)\n",
+    "    tt = f2.truth_table()\n",
+    "\n",
+    "    k = sum(x == y for x, y in zip(tt, tt_f))\n",
+    "    if k > max:\n",
+    "        max = k\n",
+    "        cur_f = f1\n",
+    "\n",
+    "max, cur_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3a0982e3-4414-45f0-8857-ecb3754c5c86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5546875"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "142 / 256."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff235b61-912d-421f-a8e1-d16ee15d4acf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,11 +492,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "33b7d4f5-fd62-4772-b24c-a2e1bead3cdb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sage.crypto.sbox import SBox\n",
+    "sbox = (\n",
+    "        0x2a, 0x00, 0x7e, 0x54, 0x82, 0xa8, 0xd6, 0xfc, 0x61, 0x4b, 0x35, 0x1f, 0xc9, 0xe3, 0x9d, 0xb7,\n",
+    "        0xbc, 0x96, 0xe8, 0xc2, 0x14, 0x3e, 0x40, 0x6a, 0xf7, 0xdd, 0xa3, 0x89, 0x5f, 0x75, 0x0b, 0x21,\n",
+    "        0x1d, 0x37, 0x49, 0x63, 0xb5, 0x9f, 0xe1, 0xcb, 0x56, 0x7c, 0x02, 0x28, 0xfe, 0xd4, 0xaa, 0x80,\n",
+    "        0x8b, 0xa1, 0xdf, 0xf5, 0x23, 0x09, 0x77, 0x5d, 0xc0, 0xea, 0x94, 0xbe, 0x68, 0x42, 0x3c, 0x16,\n",
+    "        0x44, 0x6e, 0x10, 0x3a, 0xec, 0xc6, 0xb8, 0x92, 0x0f, 0x25, 0x5b, 0x71, 0xa7, 0x8d, 0xf3, 0xd9,\n",
+    "        0xd2, 0xf8, 0x86, 0xac, 0x7a, 0x50, 0x2e, 0x04, 0x99, 0xb3, 0xcd, 0xe7, 0x31, 0x1b, 0x65, 0x4f,\n",
+    "        0x73, 0x59, 0x27, 0x0d, 0xdb, 0xf1, 0x8f, 0xa5, 0x38, 0x12, 0x6c, 0x46, 0x90, 0xba, 0xc4, 0xee,\n",
+    "        0xe5, 0xcf, 0xb1, 0x9b, 0x4d, 0x67, 0x19, 0x33, 0xae, 0x84, 0xfa, 0xd0, 0x06, 0x2c, 0x52, 0x78,\n",
+    "        0xf6, 0xdc, 0xa2, 0x88, 0x5e, 0x74, 0x0a, 0x20, 0xbd, 0x97, 0xe9, 0xc3, 0x15, 0x3f, 0x41, 0x6b,\n",
+    "        0x60, 0x4a, 0x34, 0x1e, 0xc8, 0xe2, 0x9c, 0xb6, 0x2b, 0x01, 0x7f, 0x55, 0x83, 0xa9, 0xd7, 0xfd,\n",
+    "        0xc1, 0xeb, 0x95, 0xbf, 0x69, 0x43, 0x3d, 0x17, 0x8a, 0xa0, 0xde, 0xf4, 0x22, 0x08, 0x76, 0x5c,\n",
+    "        0x57, 0x7d, 0x03, 0x29, 0xff, 0xd5, 0xab, 0x81, 0x1c, 0x36, 0x48, 0x62, 0xb4, 0x9e, 0xe0, 0xca,\n",
+    "        0x98, 0xb2, 0xcc, 0xe6, 0x30, 0x1a, 0x64, 0x4e, 0xd3, 0xf9, 0x87, 0xad, 0x7b, 0x51, 0x2f, 0x05,\n",
+    "        0x0e, 0x24, 0x5a, 0x70, 0xa6, 0x8c, 0xf2, 0xd8, 0x45, 0x6f, 0x11, 0x3b, 0xed, 0xc7, 0xb9, 0x93,\n",
+    "        0xaf, 0x85, 0xfb, 0xd1, 0x07, 0x2d, 0x53, 0x79, 0xe4, 0xce, 0xb0, 0x9a, 0x4c, 0x66, 0x18, 0x32,\n",
+    "        0x39, 0x13, 0x6d, 0x47, 0x91, 0xbb, 0xc5, 0xef, 0x72, 0x58, 0x26, 0x0c, 0xda, 0xf0, 0x8e, 0xa4\n",
+    "    )\n",
+    "\n",
+    "S = SBox(sbox)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "6db4945f-1394-4b5c-b5f5-7dad899a241d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -128, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S.linear_approximation_table()[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e8b2db1-d6f3-401f-bee6-603b8d4fd714",
+   "metadata": {},
+   "source": [
+    "$c0 c1 c2 c3$\n",
+    "\n",
+    "$d0 d1 d2 d3$\n",
+    "\n",
+    "$.........0x1$\n",
+    "\n",
+    "$x: x + d3 = 0x1$\n",
+    "\n",
+    "$x: x + d3 + 0x1 + 0x2= 0 + 0x2$\n"
+   ]
   },
   {
    "cell_type": "code",
